// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerImportStep should render with multiple import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 iAJLiV no-ligatures"
      data-testid="TransactionNetwork"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdnxRM NjstW"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div>
      <ul>
        <li>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 eQnpyT no-ligatures py-4"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2 w-40 whitespace-nowrap"
            >
              <div
                class="flex items-center font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                          data-testid="TruncateEnd"
                        >
                          ARK Devn…
                        </span>
                      </span>
                      <span
                        class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdnxRM AFVmm"
                  height="16"
                  width="16"
                >
                  <svg>
                    pencil.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
        <li>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 eQnpyT no-ligatures py-4"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2 w-40 whitespace-nowrap"
            >
              <div
                class="flex items-center font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                          data-testid="TruncateEnd"
                        >
                          ARK Devn…
                        </span>
                      </span>
                      <span
                        class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdnxRM AFVmm"
                  height="16"
                  width="16"
                >
                  <svg>
                    pencil.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep should render with single import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 iAJLiV no-ligatures"
      data-testid="TransactionNetwork"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdnxRM NjstW"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 iAJLiV no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Address
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
          >
            <span
              class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
            </span>
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 iAJLiV no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 bFhxMh no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
        >
          Wallet Name
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet #4
        </div>
      </div>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
        data-testid="LedgerImportStep__edit-alias"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="sc-bdnxRM AFVmm"
            height="16"
            width="16"
          >
            <svg>
              pencil.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
  </section>
</div>
`;
